addition on Readme file and Contact Page

--- a/11170480_DCIT205/forms.html
+++ b/11170480_DCIT205/forms.html
@@ -16,6 +16,7 @@
                 <li><a href="Faculty.html">Faculty</a></li>
                 <li><a href="Student.html">Student life</a></li>
                 <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="contact.html">Contact</a></li>
                                 
         </ul>
     </nav>
