--- a/11170480_DCIT205/login.html
+++ b/11170480_DCIT205/login.html
@@ -15,6 +15,7 @@
                 <li><a href="Faculty.html">Faculty</a></li>
                 <li><a href="Student.html">Student life</a></li>
                 <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="contact.html">Contact</a></li>
                                 
         </ul>
     </nav
@@ -27,7 +28,7 @@
     </div>
   
     <div class="container">
-      <label for="uname"><b>Username</b></label>
+      <label for="uname"><b>Student/Staff Username</b></label>
       <input type="text" placeholder="Enter Username" name="uname" required>
   
       <label for="psw"><b>Password</b></label>
