--- a/11170480_DCIT205/Faculty.html
+++ b/11170480_DCIT205/Faculty.html
@@ -15,6 +15,7 @@
                 <li><a href="Faculty.html">Faculty</a></li>
                 <li><a href="Student.html">Student life</a></li>
                 <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="contact.html">Contact</a></li>
                                 
         </ul>
     </nav
@@ -33,7 +34,8 @@
             <div class="col-2">
                 <h1> Welcome To Faculty </h1>
                 <p>  Welcome to a community where passion meets proficiency, <br>and the future of computing unfolds.</p>
-            </div>
+                <a href="login.html" class="btn">Log In &#8594;</a>
+              </div>
             <div class="col-2">
 <img src="images/codes.avif">
             </div>
