--- a/11170480_DCIT205/Faq.html
+++ b/11170480_DCIT205/Faq.html
@@ -15,6 +15,7 @@
                 <li><a href="Faculty.html">Faculty</a></li>
                 <li><a href="Student.html">Student life</a></li>
                 <li><a href="FAQ.html">FAQ</a></li>
+                <li><a href="contact.html">Contact</a></li>
                                 
         </ul>
     </nav
@@ -35,7 +36,7 @@
                 <p>  Welcome to a community where passion meets proficiency, <br>and the future of computing unfolds.</p>
             </div>
             <div class="col-2">
-<img src="images/codes.avif">
+<img src="./images/cs2.jpg">
             </div>
         </div>
 
